languages/CNNArchLang/src/test/resources/invalid_tests/InvalidIOShape2.cnna
/* (c) https://github.com/MontiCore/monticore */
architecture InvalidIOShape2(){
    def input Q(-oo:+oo)^{10.5} in1
    def output Q(0:1)^{-10} out1

    in1 ->
    FullyConnected(units=64) ->
    Tanh() ->
    FullyConnected(units=10) ->
    Softmax() ->
    out1;
}
